# bj

./: ..gitignore.un~  .Makefile.un~  .clang-format  .editorconfig  .gitignore  .main.c.swp  .main.c.un~  .vimrc  11047.c  1260.c  17626.c  1764.c  21736.c  2579.c  CMakeLists.txt  CMakePresets.json  Makefile  Makefile~  README.md  bj.sln  gp  header_template.h  main  main.c  main.cpp  main.c~  memo.txt  mycodebase.c  output.txt  result.txt  run.sh  source_template.c  test.c  test.txt  vs_toolchain.cmake
bj/: .editorconfig  Makefile  bj.vcxproj  bj.vcxproj.filters  fastIO.cpp
bj/bj/: 10026.c  1003.c  1005.cpp  1012.c  1019.cpp  1043.c  10431.cpp  10482.cpp  1074.c  10775.cpp  10830.c  1086.cpp  10942.cpp  11047.c  11049.cpp  11053.c  11054.c  1106.cpp  1107.c  11279.c  11286.c  1132.cpp  11399.c  11404.c  11444.cpp  1149.c  11505.cpp  1160.cpp  11659.c  11660.c  1167.c  11689.cpp  11722.cpp  11724.c  11725.c  11726.c  11779.c  1197-2.cpp  1197.cpp  12015.cpp  (+183 more)
kupc/: c.c  f.c  h.c
mylib/: arraystack.c  even_simpler_queue.c  ibacktrack.c  minheap.c  mmap_fastio.c  mycodebase.c  numbertheory.c  prime.c  simple_readwrite.c
solutions/: 1012.c  11399.c  2805.c  9375.c  mycodebase.c
spc/: a.c  b.c  d.c  e.c
src/: 10026.c  10830.c  11054.c  11279.c  11403.c  11659.c  11724.c  11726.c  11779.c  1238.c  13172.c  13549.c  14940.c  15650.c  15654.c  15686.c  16928.c  17219.c  1753.c  18870.c  1932.c  2096.c  2630.c  2667.c  30467_solving.c  5430.c  6064.c  7569.c  7576.c  9019.c  9461.c  9935.c  circularqueue.c  mmap_fastio.c  mycodebase.c  simple_readwrite.c  test.c
(+156 files in other folders)
